# dt-contracts

./: .gitignore  check_mro_slots.py  fast.sh  gemini.md  pyproject.toml  reproduce_plain_slots.py  reproduce_slots.py  reproduce_slots_inheritance.py  reproduce_slots_v3.py  reproduce_strict.py
docs/: CONTRACTS_BLUEPRINT.md
src/dt_contracts/: __init__.py  assessment.py  base.py  bridge.py  lesson_plan.py  pedagogy.py  student.py  sync.py  telemetry.py  topology.py  tutoring.py
src/dt_contracts/sandboxes/: __init__.py  actions.py  base.py  browser.py  chemistry.py  data.py  design.py  electronics.py  kaplay.py  math.py  minetest.py  music.py  phet.py  snap.py
tests/: __init__.py  test_architecture.py  test_assessment.py  test_bridge.py  test_lesson_plan.py  test_pedagogy.py  test_sandbox_models.py  test_student.py  test_sync.py  test_telemetry.py  test_topology.py  test_tutoring.py
