[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dt-contracts"
version = "0.1.0"
description = "Sovereign Pydantic V2 schemas with __slots__ for Deepthought Educational OS."
requires-python = ">=3.14"
authors = [{name = "Epistemon", email = "charlesrobertsstudio@gmail.com"}]
dependencies = [
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "dt_contracts.*"
disallow_any_explicit = true 

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", "ISC001", "D203", "D213", "TRY003", "TRY300", "TRY301",
    "D101", "D106"
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.uv]
managed = true
